[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Editor/EditorManager.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[node name="Editor" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 47.0, 1127.0 ],
"_edit_vertical_guides_": [ 4006.74, 5929.38 ]
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1081.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1071.0
mouse_filter = 2

[node name="MenuContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.04
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/MenuContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "Exit"

[node name="FileButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MenuContainer"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MenuContainer"]
margin_left = 200.0
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "Edit"

[node name="MenuButton2" type="MenuButton" parent="MarginContainer/VBoxContainer/MenuContainer"]
margin_left = 300.0
margin_right = 400.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )
text = "uhhh"

[node name="MainUISplitter" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1900.0
margin_bottom = 1061.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUISplitter"]
margin_right = 1900.0
margin_bottom = 672.0
mouse_filter = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="WindowUISplitter" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer"]
margin_right = 1900.0
margin_bottom = 672.0
rect_min_size = Vector2( 0, 380 )
mouse_filter = 1

[node name="UISplitter" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter"]
margin_right = 944.0
margin_bottom = 672.0
rect_min_size = Vector2( 188, 0 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/autohide = 1

[node name="PropertiesContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter"]
margin_right = 466.0
margin_bottom = 672.0
rect_min_size = Vector2( 116, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer"]
margin_right = 466.0
margin_bottom = 672.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel"]
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
margin_top = 15.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer"]
margin_right = 419.0
margin_bottom = 657.0
mouse_filter = 2

[node name="PropertiesLabel" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 419.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/PropertiesLabel"]
margin_right = 419.0
margin_bottom = 31.0
mouse_filter = 2
text = "Object Properties"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 419.0
margin_bottom = 657.0
mouse_filter = 2
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 419.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 419.0
margin_bottom = 24.0
mouse_filter = 1
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 419.0
margin_bottom = 52.0

[node name="LineEdit3" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 419.0
margin_bottom = 80.0

[node name="LineEdit4" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/PropertiesContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 419.0
margin_bottom = 108.0

[node name="ExtrasContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter"]
margin_left = 478.0
margin_right = 944.0
margin_bottom = 672.0
rect_min_size = Vector2( 116, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer"]
margin_right = 466.0
margin_bottom = 672.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel"]
anchor_left = 0.05
anchor_right = 0.85
anchor_bottom = 1.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer"]
margin_right = 412.0
margin_bottom = 697.0

[node name="ExtrasLabel" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 412.0
margin_bottom = 33.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ExtrasLabel"]
margin_right = 412.0
margin_bottom = 33.0
text = "uhhhhhhh"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 412.0
margin_bottom = 697.0
mouse_filter = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 412.0
margin_bottom = 108.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 412.0
margin_bottom = 24.0
mouse_filter = 1
expand_to_text_length = true

[node name="LineEdit2" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 412.0
margin_bottom = 52.0

[node name="LineEdit3" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 412.0
margin_bottom = 80.0

[node name="LineEdit4" type="LineEdit" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/UISplitter/ExtrasContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 412.0
margin_bottom = 108.0

[node name="LevelDisplayContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter"]
margin_left = 956.0
margin_right = 1900.0
margin_bottom = 672.0
rect_min_size = Vector2( 384, 216 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer"]
margin_right = 944.0
margin_bottom = 672.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -52.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer/Panel/MarginContainer"]
margin_right = 944.0
margin_bottom = 620.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSimulator" type="Viewport" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer/Panel/MarginContainer/ViewportContainer"]
size = Vector2( 944, 620 )
own_world = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera2D" type="Camera2D" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer/Panel/MarginContainer/ViewportContainer/LevelSimulator"]
position = Vector2( 960, 4000 )
scale = Vector2( 1e-05, 1e-05 )
current = true

[node name="icon" type="Sprite" parent="MarginContainer/VBoxContainer/MainUISplitter/TopContainer/WindowUISplitter/LevelDisplayContainer/Panel/MarginContainer/ViewportContainer/LevelSimulator"]
position = Vector2( 960, 540 )
scale = Vector2( 29.8207, 16.7656 )
texture = ExtResource( 1 )

[node name="BottomContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUISplitter"]
margin_top = 684.0
margin_right = 1900.0
margin_bottom = 1017.0
mouse_filter = 1
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer"]
margin_right = 1900.0
margin_bottom = 333.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer"]
margin_right = 1900.0
margin_bottom = 29.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="AddObjectButton" type="MenuButton" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 84.0
margin_bottom = 29.0
text = "Add Object"

[node name="hmm" type="MenuButton" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 134.0
margin_bottom = 29.0
text = "hmm"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer"]
margin_top = 33.0
margin_right = 1900.0
margin_bottom = 333.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer/HSplitContainer"]
margin_right = 536.0
margin_bottom = 300.0
rect_min_size = Vector2( 178, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
custom_styles/panel = SubResource( 3 )

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer/MainUISplitter/BottomContainer/Panel/VBoxContainer/HSplitContainer"]
margin_left = 548.0
margin_right = 1900.0
margin_bottom = 300.0
rect_min_size = Vector2( 676, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
